# Traffic_Project

./: README.md  db.sqlite3  package-lock.json  pyproject.toml
backend/: settings.py  urls.py
backend/apps/api/: views.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  TestApp.jsx  main.jsx
frontend/src/components/: CollisionInfoRequest.jsx  ExploreTools.jsx  GradientLine.jsx  Header.jsx  HomePage.jsx  ParkingAvailability.jsx  TeamSection.jsx  TestComp.jsx
