[tool.poetry]
name = "traffic-project"
version = "0.1.0"
description = ""
authors = ["Imagine0369 <mikephelps11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-cors-headers = "^4.3.1"
boto3 = "^1.34.73"
django-storages = "^1.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
